football events playresult and playtype buttons on mobile

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -290,6 +290,15 @@
               @if (getEventPlayTypeFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell">
                   @if (isMobile) {
+                    @if (!isKickOffPlay(eventsArray, i) && !isPatOnePlay(eventsArray, i) && !isKickPlay(eventsArray, i)) {
+                      <div class="event-table-cell">
+                        <app-football-events-play-type-buttons
+                          [control]="control"
+                          [eventsArray]="eventsArray"
+                          [i]="i"
+                        ></app-football-events-play-type-buttons>
+                      </div>
+                    }
                     <app-select-list-of-strings
                       [control]="control"
                       [placeholder]="'play type'"
@@ -429,6 +438,13 @@
               @if (getEventPlayResultFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell">
                   @if (isMobile) {
+                    <!--                    <div class="event-table-cell">-->
+                    <app-football-events-play-result-buttons
+                      [control]="control"
+                      [eventsArray]="eventsArray"
+                      [i]="i"
+                    ></app-football-events-play-result-buttons>
+                    <!--                    </div>-->
                     <app-select-list-of-strings
                       [control]="control"
                       [placeholder]="'play result'"
